-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.2, 5.13.0 Beta3
-
-
99f08e98be434f2b0d2ae2f310db0ca25ee919a7 (qt/qtdeclarative/dev)
Selection of text from a read-only TextArea/ TextEdit is not smooth with iOS.
You can select the text with a double tap but there is no handle to change the selection.
TextArea{
text: "Sample Text"
readOnly: true
selectByMouse :true
selectByKeyboard: true
}
Selection works fine when read-only is set to false. But it should work with read-only text also.
- depends on
-
QTBUG-91417 Selection does not work in read-only text editing controls - QtWidgets
-
- Closed
-
- relates to
-
QTBUG-91545 [iOS] Selection in TextEdit not working for Readonly text
-
- Closed
-
| For Gerrit Dashboard: QTBUG-75556 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 336574,8 | Android: Add possibility to copy text from read-only Qml TextEdit | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 378676,2 | qquicktextinput: add ImReadOnly | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 440716,7 | qquicktextinput: add ImReadOnly | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |