Android: Add possibility to copy text from read-only Qml TextEdit

In case of a read-only TextEdit it was imposibble to move text selection
handles and copy the selected text from.
You could see the handles but you couldn't move them, neither you could
copy the text.

Fixes: QTBUG-75556
Change-Id: I23e9a1948d01b5078046fe33559d13949bbde5d5
Reviewed-by: Rami Potinkara <rami.potinkara@qt.io>
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>